welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:20: error: Unmatched closing brace '}' ignored here
    }
    ^ZigZag:25: error: Unmatched closing brace '}' ignored here
      }
      ^ZigZag:36: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:39: error: expected start of definition
	override def forward()  {
                 ^ZigZag:42: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:45: error: expected start of definition
	override def backward() {
                 ^ZigZag:48: error: Unmatched closing brace '}' ignored here
}
^